--- a/test-dev.properties
+++ b/test-dev.properties
@@ -1,6 +1,6 @@
 lucky-word: mmb
 
 
-mysql-url: jdbc:mysql://192.168.1.200:3306/mezura
+mysql-url: jdbc:mysql://192.168.1.200:3306/mezura?characterEncoding=utf8&useSSL=true
 mysql-user: mezura
 mysql-pass: mezura
