--- a/test-test.properties
+++ b/test-test.properties
@@ -4,3 +4,13 @@ lucky-word: mmb-test
 mysql-url: jdbc:mysql://192.168.1.200:3306/mezura-test?characterEncoding=utf8&useSSL=true
 mysql-user: mezura
 mysql-pass: mezura
+
+配置数据库连接
+spring.datasource.name: mezura
+spring.datasource.url: jdbc:mysql://192.168.1.200:3306/mezura-test?characterEncoding=utf8&useSSL=true
+spring.datasource.username: mezura
+spring.datasource.password: mezura
+spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.tomcat.max-active: 20
+spring.datasource.tomcat.max-wait: 60000
