--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -14,3 +14,6 @@ spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-active: 20
 spring.datasource.tomcat.max-wait: 60000
+
+
+redis-server: 192.168.1.200
