--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -16,4 +16,4 @@ spring.datasource.tomcat.max-active: 20
 spring.datasource.tomcat.max-wait: 60000
 
 
-redis-server: 192.168.1.200
+redis-server-addr: 192.168.1.200
