--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -19,3 +19,13 @@ spring.datasource.tomcat.max-wait: 60000
 redis-server-addr: 192.168.1.200
 redis-server-port: 6379
 redis-password: zhilu2017
+
+jedis.jedisPoolConfig.maxActive: 10
+jedis.jedisPoolConfig.maxIdle: 5
+jedis.jedisPoolConfig.minIdle: 1
+jedis.jedisPoolConfig.testOnBorrow: true
+jedis.jedisPoolConfig.testOnReturn: true
+jedis.jedisPoolConfig.testWhileIdle: true
+jedis.jedisPoolConfig.numTestsPerEvictionRun: 10
+jedis.jedisPoolConfig.timeBetweenEvictionRunMillis: 60000
+jedis.jedisPoolConfig.maxWait: 3000
