--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -1,13 +1,9 @@
 lucky-word: mmb-test
 
 
-mysql-url: jdbc:mysql://192.168.1.200:3306/mezura-test?characterEncoding=utf8&useSSL=true
-mysql-user: mezura
-mysql-pass: mezura
-
 配置数据库连接
 spring.datasource.name: mezura
-spring.datasource.url: jdbc:mysql://192.168.1.200:3306/mezura-test?characterEncoding=utf8&useSSL=true
+spring.datasource.url: jdbc:mysql://192.168.1.200:3306/mezura_hq?characterEncoding=utf8&useSSL=true
 spring.datasource.username: mezura
 spring.datasource.password: mezura
 spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
