--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -2,7 +2,7 @@ lucky-word: mmb-test
 
 
 配置数据库连接
-spring.datasource.name: mezura
+spring.datasource.name: mezura_hq
 spring.datasource.url: jdbc:mysql://192.168.1.200:3306/mezura_hq?characterEncoding=utf8&useSSL=true
 spring.datasource.username: mezura
 spring.datasource.password: mezura
