--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -12,9 +12,13 @@ spring.datasource.tomcat.max-active: 20
 spring.datasource.tomcat.max-wait: 60000
 
 
-redis-server-addr: 192.168.1.200
-redis-server-port: 6379
-redis-password: zhilu2017
+spring.redis.host: 192.168.1.200
+spring.redis.port: 6379  
+spring.redis.password: zhilu2017
+spring.redis.pool.max-idle: 8 # pool settings ...  
+spring.redis.pool.min-idle: 0  
+spring.redis.pool.max-active: 8  
+spring.redis.pool.max-wait: -1  
 
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
