--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -20,8 +20,8 @@ spring.redis.pool.min-idle: 0
 spring.redis.pool.max-active: 8  
 spring.redis.pool.max-wait: -1  
 
-logging.config=classpath:logback.xml
-logging.path=classpath:/log
+logging.config: classpath:logback.xml
+logging.path: classpath:/log
 
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
