--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -21,7 +21,7 @@ spring.redis.pool.max-active: 8
 spring.redis.pool.max-wait: -1  
 
 logging.config: classpath:logback.xml
-logging.path: classpath:/log
+logging.path: /log
 
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
