--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -26,7 +26,7 @@ logging.config: classpath:logback.xml
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
 jedis.jedisPoolConfig.minIdle: 1
-jedis.jedisPoolConfig.testOnBorrow: true
+jedis.jedisPoolConfig.testOnBorrow: false
 jedis.jedisPoolConfig.testOnReturn: true
 jedis.jedisPoolConfig.testWhileIdle: true
 jedis.jedisPoolConfig.numTestsPerEvictionRun: 10
