--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -8,6 +8,7 @@ spring.datasource.username: mezura
 spring.datasource.password: mezura
 spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.testOnBorrow: false
 spring.datasource.tomcat.max-active: 20
 spring.datasource.tomcat.max-wait: 60000
 
