--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -22,6 +22,7 @@ spring.redis.pool.max-active: 8
 spring.redis.pool.max-wait: -1  
 
 logging.config: classpath:logback.xml
+logging.level.root: info
 #logging.path: /log
 
 jedis.jedisPoolConfig.maxActive: 10
