--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -22,7 +22,8 @@ spring.redis.pool.max-active: 8
 spring.redis.pool.max-wait: -1  
 
 logging.config: classpath:logback.xml
-logging.level.root: info
+logging.level.org.springframework.web: DEBUG
+logging.level.root: DEBUG
 #logging.path: /log
 
 jedis.jedisPoolConfig.maxActive: 10
