--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -21,9 +21,9 @@ spring.redis.pool.min-idle: 0
 spring.redis.pool.max-active: 8  
 spring.redis.pool.max-wait: -1  
 
-logging.config: classpath:logback.xml
-logging.level.org.springframework.web: DEBUG
-logging.level.root: DEBUG
+#logging.config: classpath:logback.xml
+#logging.level.org.springframework.web: DEBUG
+#logging.level.root: DEBUG
 #logging.path: /log
 
 jedis.jedisPoolConfig.maxActive: 10
