--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -16,10 +16,10 @@ spring.datasource.tomcat.max-wait: 60000
 spring.redis.host: 192.168.1.200
 spring.redis.port: 6379  
 spring.redis.password: zhilu2017
-spring.redis.pool.max-idle: 8 # pool settings ...  
-spring.redis.pool.min-idle: 0  
-spring.redis.pool.max-active: 8  
-spring.redis.pool.max-wait: -1  
+spring.redis.pool.max-idle: 8
+spring.redis.pool.min-idle: 0
+spring.redis.pool.max-active: 8
+spring.redis.pool.max-wait: -1
 
 #logging.config: classpath:logback.xml
 #logging.level.org.springframework.web: DEBUG
