--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -26,6 +26,8 @@ spring.redis.pool.max-wait: -1
 #logging.level.root: DEBUG
 #logging.path: /log
 
+page.size = 20
+
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
 jedis.jedisPoolConfig.minIdle: 1
