--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -16,7 +16,7 @@ spring.datasource.tomcat.max-wait: 60000
 spring.redis.host: 192.168.1.200
 spring.redis.port: 6379  
 spring.redis.password: zhilu2017
-redis.connect.retry: 3
+redis.connect.max.num: 3
 spring.redis.pool.max-idle: 8
 spring.redis.pool.min-idle: 0
 spring.redis.pool.max-active: 8
