--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -27,7 +27,7 @@ spring.redis.pool.max-wait: -1
 #logging.level.root: DEBUG
 #logging.path: /log
 
-page.size = 1
+page.size: 1
 
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
