--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -29,6 +29,10 @@ spring.redis.pool.max-wait: -1
 
 page.size: 1
 
+mezura.images.basepath: /mezurahome/images
+
+category.maxSize: 5
+
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
 jedis.jedisPoolConfig.minIdle: 1
