--- a/mezura-hq-test.properties
+++ b/mezura-hq-test.properties
@@ -1,6 +1,3 @@
-lucky-word: mmb-test
-
-
 配置数据库连接
 spring.datasource.name: mezura_hq
 spring.datasource.url: jdbc:mysql://192.168.1.200:3306/mezura_hq?characterEncoding=utf8&useSSL=true
@@ -14,7 +11,7 @@ spring.datasource.tomcat.max-wait: 60000
 
 
 spring.redis.host: 192.168.1.200
-spring.redis.port: 6379  
+spring.redis.port: 6379
 spring.redis.password: zhilu2017
 redis.connect.max.num: 3
 spring.redis.pool.max-idle: 8
@@ -27,7 +24,12 @@ spring.redis.pool.max-wait: -1
 #logging.level.root: DEBUG
 #logging.path: /log
 
-page.size: 1
+page.size: 8
+category.maxLevel: 5
+file.path: /mezurahome
+
+zuul.addr: 192.168.1.200
+
 
 jedis.jedisPoolConfig.maxActive: 10
 jedis.jedisPoolConfig.maxIdle: 5
